// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObserveButton renders 1`] = `
<div
  class="ds-space text-align-center"
  style="margin-top: 4px; margin-bottom: 4px;"
>
  <button
    class="base-button --icon-only --circle --filled"
    type="button"
  >
    <span
      class="base-icon"
    >
      <!---->
    </span>
     
    <!---->
     
  </button>
   
  <div
    class="ds-space"
    style="margin-bottom: 4px;"
  />
   
  <p
    class="ds-text observe-button-text ds-text-soft"
  >
    <h3
      class="ds-heading ds-heading-h3"
      style="display: inline;"
    >
      1x
    </h3>
    
    
  
  </p>
</div>
`;

exports[`ObserveButton renders unobserved 1`] = `
<div
  class="ds-space text-align-center"
  style="margin-top: 4px; margin-bottom: 4px;"
>
  <button
    class="base-button --icon-only --circle"
    type="button"
  >
    <span
      class="base-icon"
    >
      <!---->
    </span>
     
    <!---->
     
  </button>
   
  <div
    class="ds-space"
    style="margin-bottom: 4px;"
  />
   
  <p
    class="ds-text observe-button-text ds-text-soft"
  >
    <h3
      class="ds-heading ds-heading-h3"
      style="display: inline;"
    >
      1x
    </h3>
    
    
  
  </p>
</div>
`;
